Add conventions plugins